--- a/tbh.html
+++ b/tbh.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="tbh.css"/>
     </head>
     <body>
+        <script src="tbh.js"></script>
         <h1>The Black Hole</h1>
         <div class="all">
             <div>
