--- a/tbh1.html
+++ b/tbh1.html
@@ -4,9 +4,26 @@
         <title>The Black Hole</title>
         <meta charset="utf-8"/>
         <meta name="viewport" content="user-scalable=0"/>
-        <link rel="stylesheet" href="tbh.css"/>
+        <link rel="stylesheet" href="tbh1.css"/>
     </head>
     <body>
-
+        <div class="head">
+            <div class="picture">
+                <img src="https://i.pinimg.com/736x/f0/5f/a2/f05fa21957d58705335bee493ba10fec.jpg"/>
+            </div>
+            <div class="information">
+                <p><b>first name:</b> Kurayami</p>
+                <br/>
+                <p><b>last name:</b> Makkura</p>
+                <br/>
+                <p><b>age:</b> 19 years</p>
+            </div>
+        </div>
+        <div class="content">
+            <div class="index1"><a class="link" href="">documents list</a></div>
+            <div class="index2"><a class="link" href="">drawings list</a></div>
+            <div class="index3"><a class="link" href="">friends list</a></div>
+            <div class="index4"><a class="link" href="">accounts list</a></div>
+        </div>
     </body>
 </html>
